fixed alignment issues

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -4,19 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
-body {
-    width: 18%;
-    width: 100%;
-    height: 80%;
-    width: 100%;
-}
 
-html {
-    width: 18%;
-    width: 100%;
-    height: 80%;
-    width: 100%;
-}
 
 @media(min-width:767px) {
     .navbar {
